# EchoAgent

./: .gitignore  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  deps.py  main.py
backend/app/api/: export.py  focus_group.py  knowledge.py  market.py  persona.py  router.py  search.py  sentiment_guard.py  simulation.py  strategy_advisor.py  task.py  utils.py  workflow.py  workshop.py  ws.py
backend/app/db/: __init__.py  memory_store.py  sqlite.py
backend/app/llm/: client.py  search_client.py
backend/app/models/: common.py  knowledge.py  market.py  persona.py  search.py  sentiment_guard.py  simulation.py  strategy_advisor.py  workflow.py  workshop.py
backend/app/repositories/: focus_group_repository.py  knowledge_repository.py  market_repository.py  persona_memory_repository.py  persona_repository.py  sentiment_guard_repository.py  simulation_repository.py  strategy_advisor_repository.py  task_repository.py  workflow_repository.py  workshop_repository.py
backend/app/services/: export_service.py  focus_group_service.py  knowledge_service.py  market_service.py  persona_service.py  search_service.py  sentiment_guard_service.py  simulation_engine.py  strategy_advisor_service.py  task_service.py  workflow_engine.py  workshop_service.py
backend/app/utils/: file_utils.py
backend/app/ws/: __init__.py  (+1 more)
backend/config/: app.yaml.example
backend/data/: echo_agent.db
backend/migrations/: init.sql
backend/tests/: conftest.py  test_api_smoke.py  test_health.py
(+55 files in other folders)
